# cryptocurrency-rate-gitlab-mirror

./: README.md
currency-fetcher/: main.py  pyproject.toml
currency-fetcher/app/: main.py
currency-fetcher/app/core/: __init__.py  config.py
currency-fetcher/app/core/utils/: __init__.py  http_client.py
currency-fetcher/app/services/: binanec_api.py
